--- a/style.css
+++ b/style.css
@@ -1,1 +1,68 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@300&display=swap');
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+:root {
+    --tenne-twany: #d65108;
+    --tenne-twany-dark: #b54507;
+}
+body {
+    font-weight: 300;
+    font-size: 1.05rem;
+    line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* */
+.btn {
+    font-family: inherit;
+    cursor: pointer;
+    outline: 0;
+    font-size: 1.05rem;
+}
+.text{
+    opacity: 0.8;
+}
+.title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+/* */
+.container {
+    min-height: 100vh;
+}
+.meal-wrapper{
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    background: #fff;
+    text-align: center;
+}
+.meal-search {
+    margin: 2rem 0;
+}
+.meal-search cite {
+    font-size: 1rem;
+}
+.meal-search-box {
+    margin: 1.2rem 0;
+    display: flex;
+    align-items: stretch;
+}
+.search-control,
+.search-btn {
+    width: 100%;
+}
+.search-control {
+    padding: 0 1rem;
+    font-size: 1.1rem;
+    font-family: inherit;
+    outline: 0; 
+    border: 1px solid var(--tenne-twany);
+    color: var(--tenne-twany);
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+}
