--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     font-size: 2rem;
     margin-bottom: 1rem;
 }
-/* */
+/** MEAL */
 .container {
     min-height: 100vh;
 }
@@ -65,4 +65,92 @@ body {
     color: var(--tenne-twany);
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
+}
+.search-control::placeholder{
+    color: var(--tenne-twany);
+}
+.search-btn {
+    width: 55px;
+    height: 55px;
+    font-size: 1.8rem;
+    background: var(--tenne-twany);
+    color: #fff;
+    border: none;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+.search-btn:hover{
+    background: var(--tenne-twany-dark)
+}
+.meal-result {
+    margin-top: 4rem;
+}
+#meal{
+    margin: 2.4rem;
+}
+.meal-item{
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
+    margin: 2rem 0;
+}
+.meal-img img {
+    width: 100%;
+    display: block;
+}
+.meal-name {
+    padding: 1.5rem 0.5rem;
+}
+.meal-name h3 {
+    font-size: 1.4rem;
+}
+.recipe-btn {
+    text-decoration: none;
+    color: #fff;
+    background: var(--tenne-twany);
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 0.75rem 0;
+    display: block;
+    width: 175px;
+    margin: 1rem auto;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+.recipe-btn:hover{
+    background: var(--tenne-twany-dark);
+}
+
+/** Media Queries */
+@media screen and (min-width: 600px) {
+    .meal-search-box{
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 768px){
+    #meal {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
 }
