--- a/style.css
+++ b/style.css
@@ -259,6 +259,16 @@ body {
 .recipe-link a:hover {
     opacity: 0.8;
 }
+/* */
+.notFound {
+    grid-template-columns: 1fr!important;
+    color: var(--tenne-twany);
+    font-size: 1.8rem;
+    font-weight: 600;
+    width: 100%;
+
+
+}
 /* Media Queries */
 @media screen and (min-width: 600px) {
     .meal-search-box{
