--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 :root {
-    --tenne-twany: #d65108;
-    --tenne-twany-dark: #b54507;
+    --green: rgb(2, 143, 84);
+    --dark-green: rgb(10, 111, 69);
 }
 body {
     font-weight: 300;
@@ -61,19 +61,19 @@ body {
     font-size: 1.1rem;
     font-family: inherit;
     outline: 0; 
-    border: 1px solid var(--tenne-twany);
-    color: var(--tenne-twany);
+    border: 1px solid var(--green);
+    color: var(--green);
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
 }
 .search-control::placeholder{
-    color: var(--tenne-twany);
+    color: var(--green);
 }
 .search-btn {
     width: 55px;
     height: 55px;
     font-size: 1.8rem;
-    background: var(--tenne-twany);
+    background: var(--green);
     color: #fff;
     border: none;
     border-top-right-radius: 2rem;
@@ -85,7 +85,7 @@ body {
     -o-transition: all 0.4s linear;
 }
 .search-btn:hover{
-    background: var(--tenne-twany-dark)
+    background: var(--dark-green)
 }
 .meal-result {
     margin-top: 4rem;
@@ -116,7 +116,7 @@ body {
 .recipe-btn {
     text-decoration: none;
     color: #fff;
-    background: var(--tenne-twany);
+    background: var(--green);
     font-weight: 500;
     font-size: 1.1rem;
     padding: 0.75rem 0;
@@ -135,7 +135,7 @@ body {
     -o-transition: all 0.4s linear;
 }
 .recipe-btn:hover{
-    background: var(--tenne-twany-dark);
+    background: var(--dark-green);
 }
 /* MEAL DETIALS */
 .meal-details {
@@ -148,7 +148,7 @@ body {
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     color: #fff;
-    background: var(--tenne-twany);
+    background: var(--green);
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -208,7 +208,7 @@ body {
 .recipe-category {
     background: #fff;
     font-weight: 600;
-    color: var(--tenne-twany);
+    color: var(--green);
     display: inline-block;
     padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
@@ -220,7 +220,7 @@ body {
 .recipe-category {
     background: #fff;
     font-weight: 600;
-    color: var(--tenne-twany);
+    color: var(--green);
     display: inline-block;
     padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
@@ -262,7 +262,7 @@ body {
 /* */
 .notFound {
     grid-template-columns: 1fr!important;
-    color: var(--tenne-twany);
+    color: var(--green);
     font-size: 1.8rem;
     font-weight: 600;
     width: 100%;
